# polybar-title-module

./: Cargo.toml  polybar-title-module.toml
src/: main.rs
